--- a/resources/views/verify.twig
+++ b/resources/views/verify.twig
@@ -41,6 +41,6 @@ send mail ...
     </pre>
 
 
-<script src="js/jquery-3.2.1.js"></script>
+<script src="/js/jquery-3.2.1.js"></script>
 
-<script src="js/get_location.js"></script>
+<script src="/js/get_location.js"></script>
