--- a/resources/views/profile.twig
+++ b/resources/views/profile.twig
@@ -88,7 +88,7 @@
                             {% endif %}
 
                             {% if not profile.friendship %}
-                                <a data-type="add" data-id="{{ profile.id }}" title="Add to friend" href="#" class="friend btn btn-control bg-green">
+                                <a data-type="add" data-id="{{ profile.id }}" data-noimg="{{ user.no_img }}" title="Add to friend" href="#" class="friend btn btn-control bg-green">
                                     <svg title="" class="olymp-happy-face-icon">
                                         <use xlink:href="/svg-icons/sprites/icons.svg#olymp-happy-face-icon"></use>
                                     </svg>
