--- a/resources/views/layouts/sidebarLeft.twig
+++ b/resources/views/layouts/sidebarLeft.twig
@@ -40,6 +40,14 @@
                         <svg class="olymp-cupcake-icon left-menu-icon"  data-toggle="tooltip" data-placement="right"   data-original-title="Friends Birthdays"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-cupcake-icon"></use></svg>
                     </a>
                 </li>
+
+                <li>
+                    <a href="/chat">
+                        <svg class="olymp-chat---messages-icon"  data-toggle="tooltip" data-placement="right"   data-original-title="chat"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
+                    </a>
+                </li>
+
+
             </ul>
         </div>
     </div>
