--- a/resources/views/profile.twig
+++ b/resources/views/profile.twig
@@ -117,7 +117,7 @@
 
 <!-- ... end Top Header-Profile -->
 
-<div class="container">
+<!-- <div class="container">
     args:<br>
     <pre>
         {#{{ users }}#}
@@ -127,6 +127,6 @@
     <pre>
         {{ dump() }}
     </pre>
-</div>
+</div> -->
 <script src="/js/friend.js"></script>
 {% endblock %}
