--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -62,11 +62,12 @@
             </div>
         </div>
     </div>
+
 </div>
 
 <!-- ... end Top Header-Profile -->
 
-<div class="container">
+<!-- <div class="container">
     args:<br>
     <pre>
         {#{{ users }}#}
@@ -76,5 +77,5 @@
     <pre>
         {{ dump() }}
     </pre>
-</div>
+</div> -->
 {% endblock %}
