--- a/resources/views/login.twig
+++ b/resources/views/login.twig
@@ -101,14 +101,7 @@
                                         </select>
                                     </div>
 
-                                    <div class="remember">
-                                        <div class="checkbox">
-                                            <label>
-                                                <input name="optionsCheckboxes" type="checkbox">
-                                                I accept the <a href="#">Terms and Conditions</a> of the website
-                                            </label>
-                                        </div>
-                                    </div>
+                                
 
                                     <button type="submit" class="btn btn-purple btn-lg full-width">Complete Registration!</button>
                                 </div>
@@ -130,15 +123,8 @@
                                         <input name="password" class="form-control" placeholder="" type="password">
                                     </div>
 
-                                    <div class="remember">
-
-                                        <div class="checkbox">
-                                            <label>
-                                                <input name="optionsCheckboxes" type="checkbox">
-                                                Remember Me
-                                            </label>
-                                        </div>
-                                        <a href="#" class="forgot">Forgot my Password</a>
+                                    <div class="remember text-center">
+                                        <a href="#" class="forgot" style="float: inherit;">Forgot my Password</a>
                                     </div>
 
                                     <button  type="submit" class="btn btn-lg btn-primary full-width">Login</button>
