--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -27,13 +27,13 @@
 							</div>
 						</form>
 
-						<div class="row">
+						<div class="row" id="tag_list">
 
 							{% if user.tags %}
 							{% for tag in user.tags %}
-								<div class="col-1" data-id="{{ tag.id_tag }}">
+								<button type="button" class="ml-1 mr-1 btn btn-secondary" data-id="{{ tag.id_tag }}">
 									{{tag.tag}}
-								</div>
+								</button>
 							{% endfor %}
 							{% else %}
 								<div class="col-12 mb-3 text-center"> Your tag list is empty</div>
