explanations if you change avatar

--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -40,7 +40,7 @@
 
                                 <ul class="more-dropdown more-with-triangle triangle-bottom-right">
                                     <li>
-                                        <a href="#" data-toggle="modal" data-target="#update-header-photo">Update Profile Photo</a>
+                                        <a href="/photo/avatar">Update Profile Photo</a>
                                     </li>
                                     <li>
                                         <a href="{{ path_for('user.settings') }}">Settings</a>
