--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -18,7 +18,7 @@
 			</div>
 		</form>
 
-		<a href="#" class="link-find-friend">Find Friends</a>
+		<a href="/search" class="link-find-friend">Find Friends</a>
 
 		<div class="control-block">
 
