soccket notif add friend

--- a/resources/views/friendRequests.twig
+++ b/resources/views/friendRequests.twig
@@ -76,6 +76,6 @@
         </div>
     </div>
 
-    <script src="/js/friend.js"></script>
+<!--     <script src="/js/friend.js"></script> -->
 
 {% endblock %}
