--- a/resources/views/friends.twig
+++ b/resources/views/friends.twig
@@ -43,7 +43,7 @@
 										</svg>
 									</a>
 
-									<a title="Send message" href="/chat/{{ friend.profile.id }}"
+									<a title="Send message"
 									   class="btn btn-control btn-blue">
 										<svg class="olymp-chat---messages-icon">
 											<use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use>
