--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -1,7 +1,9 @@
 <!-- Header-BP -->
 
 <header class="header" id="site-header">
-
+	<div id="notif_user_id" style="display:none;" class="page-title">
+		{{ user.id }}
+	</div>
 	<div class="page-title">
 		<h6>{{ title }}</h6>
 	</div>
