--- a/resources/views/layouts/app.twig
+++ b/resources/views/layouts/app.twig
@@ -50,9 +50,9 @@
 <script src="/js/chat_field.js"></script>
 <script src="/js/add_chat.js"></script>
 <script src="/js/chat.js"></script>
+<script src="/js/notifViewPrifile.js"></script>
 
- <script src="/js/friend.js"></script>
-
+<script src="/js/friend.js"></script>
 
 <script src="/js/jquery.appear.js"></script>
 <script src="/js/jquery.mousewheel.js"></script>
