--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -59,10 +59,10 @@
 						<use xlink:href="/svg-icons/sprites/icons.svg#olymp-thunder-icon"></use>
 					</svg>
 
-					<div class="label-avatar bg-primary"
-						{% if not num_notifications %}
-							style="display: none;"
-						{% endif %}
+					<div id="notif_num" class="label-avatar bg-primary 
+					{% if not num_notifications %}
+							none
+						{% endif %}"
 					>{{ num_notifications }}</div>
 				</a>
 			</div>
