--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -75,8 +75,64 @@
             </div>
         {% endfor %}
     {% endif %}
-</div>
 
+
+    <div class="row">
+        {% if profile_suggestions %}
+        {{dump(profile_suggestions)}}
+        <div class="col-12">Profile sugestions:</div>
+
+            {% for profile in profile_suggestions %}
+                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <div class="ui-block" data-mh="friend-groups-item">
+                        <div class="friend-item friend-groups">
+                            <div class="friend-item-content">
+                                <div class="more">
+                                    <svg class="olymp-three-dots-icon">
+                                        <use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use>
+                                    </svg>
+                                    <ul class="more-dropdown">
+                                        <li>
+                                            <a href="#">Report Profile</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Block Profile</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="friend-avatar">
+                                    <div class="author-thumb">
+                                        <img src="img{{ profile.img }}">
+                                    </div>
+                                    <div class="author-content">
+                                        <a href="/profile/{{ profile.id_user }}"
+                                           class="h5 author-name">{{ profile.login }}</a>
+                                        <div class="country">{{ profile.status }}</div>
+                                    </div>
+                                </div>
+
+                                <div class="control-block-button">
+                                    <a data-type="add_friend" data-id="{{ profile.id_user }}"
+                                       title="Send request" href="#" class="btn btn-control bg-green friend"
+                                       data-toggle="modal" data-target="#create-friend-group-add-friends">
+                                        <svg class="olymp-happy-faces-icon">
+                                            <use xlink:href="svg-icons/sprites/icons.svg#olymp-happy-faces-icon"></use>
+                                        </svg>
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+
+        {% endif %}
+
+    
+    </div>
+    
+</div>
 
 {% if not user.lat_lng %}
     <script src="/js/get_location.js"></script>
