add chat functionality

--- a/resources/views/layouts/sidebarLeft.twig
+++ b/resources/views/layouts/sidebarLeft.twig
@@ -45,7 +45,7 @@
 
                 <li>
                     <a href="/chat">
-                        <svg class="olymp-chat---messages-icon"  data-toggle="tooltip" data-placement="right"   data-original-title="chat"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
+                        <svg class="olymp-chat---messages left-menu-icon"  data-toggle="tooltip" data-placement="right"   data-original-title="chat"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
                     </a>
                 </li>
 
@@ -99,6 +99,14 @@
                         <span class="left-menu-title">Friends Birthdays</span>
                     </a>
                 </li>
+
+                 <li>
+                    <a href="/chat">
+                         <svg class="olymp-chat---messages left-menu-icon"  data-toggle="tooltip" data-placement="right"   data-original-title="chat"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
+                        <span class="left-menu-title">Chat</span>
+                    </a>
+                </li>
+
 
             </ul>
 
