--- a/resources/views/friends.twig
+++ b/resources/views/friends.twig
@@ -43,8 +43,8 @@
 										</svg>
 									</a>
 
-									<a title="Send message"
-									   class="btn btn-control btn-blue">
+									<a id="go_to_chat" title="Send message" href="#" data-id="{{friend.profile.id}}"
+									   class="btn btn-control bg-purple">
 										<svg class="olymp-chat---messages-icon">
 											<use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use>
 										</svg>
