--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -1,11 +1,14 @@
 <!-- Header-BP -->
 
 <header class="header" id="site-header">
-	<div id="notif_user_id" style="display:none;" class="page-title">
-		{{ user.id }}
+	<div id="notif_user_id" style="display:none;">
+		{{user.id}}
+	</div>
+	<div id="conn_id" style="display:none;">
+		
 	</div>
 	<div class="page-title">
-		<h6>{{ title }}</h6>
+		<h6>{{title}}</h6>
 	</div>
 
 	<div class="header-content-wrapper">
