--- a/resources/views/layouts/app.twig
+++ b/resources/views/layouts/app.twig
@@ -28,6 +28,9 @@
     <link rel="stylesheet" type="text/css" href="/css/main.min.css">
     <link rel="stylesheet" type="text/css" href="/css/fonts.min.css">
     <script src="/js/jquery-3.2.1.js"></script>
+    <script src="/js/Vislib/visibility.fallback.js"></script>
+    <script src="/js/Vislib/visibility.core.js"></script>
+    <script src="/js/Vislib/visibility.timers.js"></script>
 
 
 </head>
