--- a/resources/views/profile.twig
+++ b/resources/views/profile.twig
@@ -17,12 +17,6 @@
                             <div class="col-lg-5 col-md-5 ">
                                 <ul class="profile-menu">
                                     <li>
-                                        <a href="02-ProfilePage.html" class="active">Timeline</a>
-                                    </li>
-                                    <li>
-                                        <a href="05-ProfilePage-About.html">About</a>
-                                    </li>
-                                    <li>
                                         <a href="06-ProfilePage.html">Friends</a>
                                     </li>
                                 </ul>
@@ -32,9 +26,7 @@
                                     <li>
                                         <a href="07-ProfilePage-Photos.html">Photos</a>
                                     </li>
-                                    <li>
-                                        <a href="09-ProfilePage-Videos.html">Videos</a>
-                                    </li>
+
                                     <li>
                                         <div class="more">
                                             <svg class="olymp-three-dots-icon"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg>
@@ -119,19 +111,13 @@
     </div>
 </div>
 
-<!-- ... end Top Header-Profile -->
 
-<!-- <div class="container">
-    args:<br>
-    <pre>
-        {#{{ users }}#}
-    </pre>
-
+ <div class="container">
     <h3>dump:</h3><br>
     <pre>
-        {{ dump() }}
+        {{ dump(profile) }}
     </pre>
-</div> -->
+</div> 
 <script src="/js/friend.js"></script>
 <script src="/js/block_user.js"></script>
 {% endblock %}
