--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -8,17 +8,8 @@
 		<h6>{{ title }}</h6>
 	</div>
 
-	<div class="header-content-wrapper">
-		<form class="search-bar w-search notification-list friend-requests">
-			<div class="form-group with-button">
-				<input class="form-control js-user-search" placeholder="Search here people or pages..." type="text">
-				<button>
-					<svg class="olymp-magnifying-glass-icon">
-						<use xlink:href="/svg-icons/sprites/icons.svg#olymp-magnifying-glass-icon"></use>
-					</svg>
-				</button>
-			</div>
-		</form>
+	<div class="header-content-wrapper text-center">
+
 
 		<a href="/search" class="link-find-friend">Find Friends</a>
 
