Search in header begin !

--- a/resources/views/layouts/app.twig
+++ b/resources/views/layouts/app.twig
@@ -54,6 +54,7 @@
 <script src="/js/add_chat.js"></script>
 <script src="/js/chat.js"></script>
 <script src="/js/notifViewPrifile.js"></script>
+<script src="/js/Search.js"></script>
 
 <script src="/js/friend.js"></script>
 
