--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -14,12 +14,7 @@
 	<div class="header-content-wrapper">
 		<form class="search-bar w-search notification-list friend-requests">
 			<div class="form-group with-button">
-				<input class="form-control js-user-search" placeholder="Search here people or pages..." type="text">
-				<button>
-					<svg class="olymp-magnifying-glass-icon">
-						<use xlink:href="/svg-icons/sprites/icons.svg#olymp-magnifying-glass-icon"></use>
-					</svg>
-				</button>
+				<input class="Search_people" placeholder="Searsch here people or pages..." type="text">
 			</div>
 		</form>
 
